[package]
name = "rl"
version = "0.1.0"
description = "A simple implementation of a subset of `ls`"
repository = "https://github.com/rjray/rl"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"
